<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/yellow">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <EditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <EditText
            android:id="@+id/lastname"
            android:hint="@string/lastname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <EditText
            android:id="@+id/mail"
            android:hint="@string/mail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <EditText
            android:id="@+id/nit"
            android:hint="@string/nit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <EditText
            android:id="@+id/university"
            android:hint="@string/university"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        <Button
            android:id="@+id/save"
            android:backgroundTint="@color/black2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/save"
            />
    </LinearLayout>

</LinearLayout>